# iot-case-mars-rover

./: .gitignore
Hub/: .gitignore  Hub.csproj  Hub.sln  Program.cs  appsettings.Development.json  appsettings.json
Hub/Data/: HubDbContext.cs
Hub/Migrations/: 20250911112650_InitialCreate.Designer.cs  20250911112650_InitialCreate.cs  20250912062732_FixCommandStatus.Designer.cs  20250912062732_FixCommandStatus.cs  20250921173551_AddImuSamples.Designer.cs  20250921173551_AddImuSamples.cs  HubDbContextModelSnapshot.cs
Hub/Models/: CommandMessage.cs  CommandStatus.cs  ImuSample.cs
Hub/Properties/: launchSettings.json
Hub/Services/: CommandFeeder.cs  CommandHub.cs  CommandService.cs  GridState.cs  Telemetry.cs  TelemetryHub.cs
RoverCore/: .gitignore  CMakeLists.txt
RoverCore/include/: BNO055.hpp  CommandStreamClient.h  CommandStreamClient.hpp  Config.h  Config.hpp  IMUPositionEstimation.hpp  Lidar.h  Lidar.hpp  LidarReader.h  MonteCarloLocalization.h  MonteCarloLocalization.hpp  Motors.h  Motors.hpp  OccupancyGrid.h  OccupancyGrid.hpp  OrientationEstimate.h  OrientationEstimate.hpp  Ray.h  Ray.hpp  TelemetryStream.hpp  header.h  wiringPi_stub.h
RoverCore/scripts/: build_docker_arm32.sh  rebuild_unix.sh  rebuild_win.ps1  upload_rpi.sh
RoverCore/src/: BNO055.cpp  BNO055Simulator.cpp  CommandStreamClient.cpp  Lidar.cpp  LidarReader.cpp  LidarSimulator.cpp  Motors.cpp  Ray.cpp  TelemetryStream.cpp  grpctest.cpp.txt  main.cpp
proto/: rover.proto  telemetry.proto
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  index.css
